Create javascript folders and some initial code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <script src="./javascript/index.js" defer type="module"></script>
 </head>
 <body>
   <div id="app">
@@ -39,7 +40,7 @@
           </tr>
         </thead>
   
-        <!-- <tbody>
+        <tbody>
           <tr>
             <td class="user">
               <img src="https://avatars.githubusercontent.com/u/61155055?v=4" alt="imagem de perfil do github">
@@ -52,7 +53,7 @@
             <td class="followers">1234</td>
             <td><button class="remove">Remover</button></td>
           </tr>
-        </tbody> -->
+        </tbody>
       </table>
     </div>
 
