hide td from html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
         <tbody>
           <tr>
-            <td class="user">
+            <!-- <td class="user">
               <img src="https://avatars.githubusercontent.com/u/61155055?v=4" alt="imagem de perfil do github">
               <a href="#">
                 <p>Gabriel Bastos</p>
@@ -51,7 +51,7 @@
             </td>
             <td class="repositories">123</td>
             <td class="followers">1234</td>
-            <td><button class="remove">Remover</button></td>
+            <td><button class="remove">Remover</button></td> -->
           </tr>
         </tbody>
       </table>
